objects/PT_PriceList__c.object
<CustomObject>
    <fields>
        <fullName>L2I_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>L2I_External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Header_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>L2I_Header_ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_IntegrationMessage__c</fullName>
        <label>L2I_IntegrationMessage</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IntegrationStatus__c</fullName>
        <label>L2I_IntegrationStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_EBS_PriceList__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Price List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Program Price List</relationshipLabel>
        <relationshipName>Program_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Price_List_Name__c</fullName>
        <label>Price List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Price_List_Sequence__c</fullName>
        <label>Price List Sequence</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>Program Price List</relationshipLabel>
        <relationshipName>Program_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Status__c</fullName>
        <label>PT_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration Pending</fullName>
                </value>
                <value>
                    <fullName>Integration Completed</fullName>
                </value>
                <value>
                    <fullName>Retry Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Price List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PT_Price_List_Name__c</columns>
        <columns>PT_Description__c</columns>
        <columns>PT_IsActive__c</columns>
        <columns>L2I_Header_ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Price List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>